# jzflow

./: .gitignore  Cargo.toml  README.md  build.rs  makefile  requirements.txt  rust-toolchain  rustfmt.toml  setup.py
.github/workflows/: rust.yml
crates/channel_runner/: Cargo.toml  dockerfile
crates/channel_runner/src/: channel_tracker.rs  main.rs  state_controller.rs  stream.rs
crates/compute_unit_runner/: Cargo.toml  dockerfile
crates/compute_unit_runner/src/: data_tracker.rs  fs_cache.rs  ipc.rs  lib.rs  main.rs  media_data_tracker.rs  mprc.rs  multi_sender.rs  state_controller.rs  stream.rs  unit.rs
crates/dp_runner/: Cargo.toml  dockerfile
crates/dp_runner/src/: channel_tracker.rs  main.rs  mprc.rs  state_controller.rs  stream.rs  unit.rs
crates/jiaozifs_client_rs/: Cargo.toml  README.md
crates/jiaozifs_client_rs/.openapi-generator/: FILES
crates/jiaozifs_client_rs/docs/: Aksk.md  AkskList.md  AksksApi.md  ArchiveType.md  AuthApi.md  Blob.md  BlockStoreConfig.md  BlockStoreConfigAzure.md  BlockStoreConfigGs.md  BlockStoreConfigLocal.md  BlockStoreConfigS3.md  Branch.md  BranchCreation.md  BranchList.md  BranchesApi.md  Change.md  ChangePair.md  Commit.md  CommitApi.md  CommonApi.md  CreateMergeRequest.md  CreateRepository.md  Credential.md  FullTreeEntry.md  Group.md  GroupApi.md  ListMembersApi.md  LoginRequest.md  Member.md  MemberApi.md  MergeMergeRequest.md  MergeRequest.md  MergeRequestFullState.md  MergeRequestList.md  MergerequestApi.md  ObjectStats.md  ObjectsApi.md  RefType.md  RepoApi.md  ReposApi.md  (+20 more)
crates/jiaozifs_client_rs/src/apis/: aksks_api.rs  auth_api.rs  branches_api.rs  commit_api.rs  common_api.rs  configuration.rs  group_api.rs  list_members_api.rs  member_api.rs  mergerequest_api.rs  mod.rs  objects_api.rs  repo_api.rs  repos_api.rs  tags_api.rs  wip_api.rs
crates/jiaozifs_client_rs/src/models/: aksk.rs  aksk_list.rs  archive_type.rs  authentication_token.rs  blob.rs  block_store_config.rs  block_store_config_azure.rs  block_store_config_gs.rs  block_store_config_local.rs  block_store_config_s3.rs  branch.rs  branch_creation.rs  branch_list.rs  change.rs  change_pair.rs  commit.rs  create_merge_request.rs  create_repository.rs  credential.rs  error.rs  full_tree_entry.rs  group.rs  login_config.rs  login_request.rs  member.rs  merge_merge_request.rs  merge_request.rs  merge_request_full_state.rs  merge_request_list.rs  mod.rs  object_stats.rs  object_stats_list.rs  pagination.rs  ref_type.rs  repository.rs  repository_list.rs  s3_auth_info.rs  safe_aksk.rs  setup_state.rs  signature.rs  (+14 more)
crates/jzflowsdk_py/: __init__.py  ipc.py  loop.py
crates/nodes_sdk/: Cargo.toml
crates/nodes_sdk/src/: fs_cache.rs  lib.rs  metadata.rs  mprc.rs  multi_sender.rs  sleep_program.rs
docs/: graph.json  架构.md  详细设计.md  进度规划.md
jz_runner/: Cargo.toml
jz_runner/src/: main.rs  program.rs  unit.rs
nodes/copy_in_place/: Cargo.toml  dockerfile
nodes/copy_in_place/src/: main.rs
nodes/dummy_in/: Cargo.toml  dockerfile
nodes/dummy_in/src/: main.rs
nodes/dummy_out/: Cargo.toml  dockerfile
nodes/dummy_out/src/: main.rs
nodes/jz_reader/: Cargo.toml  dockerfile
nodes/jz_reader/src/: main.rs
nodes/jz_writer/: Cargo.toml  dockerfile
nodes/jz_writer/src/: main.rs
nodes/list_files/: Cargo.toml  dockerfile
nodes/list_files/src/: main.rs
nodes/make_article/: Cargo.toml  dockerfile
nodes/make_article/src/: main.rs
nodes/shell_run/: dockerfile  main.py
runner/compute_data_runner/: Cargo.toml
runner/compute_data_runner/src/: ipc.rs  main.rs  program.rs  unit.rs
runner/compute_runner/: Cargo.toml
runner/compute_runner/src/: main.rs  program.rs  unit.rs
runner/compute_unit_runner/src/: ipc.rs
runner/dc_runner/: Cargo.toml
runner/dc_runner/src/: main.rs  mprc.rs  unit.rs
runner/dp_runner/: Cargo.toml
runner/dp_runner/src/: channel_tracker.rs  main.rs  mprc.rs  program.rs  unit.rs
script/: cd.dockerfile  dp.dockerfile  example-jzfs_writer.json  example_dag.json  jzfs_reader.json  jzfs_reader_with_label.json  jzfs_writer.json  local-storageclass.yaml  net-debug.dockerfile  nfs-storageclass.yaml
script/breast-cancer-detection/: Dockerfile  breast-cancer-detection.json  crop_mammogram.sh  get_optimal_centers.sh  main.py  run_model_classifier.sh  run_model_classifier_heatmap.sh
script/housing-prices/: Dockerfile  README.md  ipc.py  regression.json  regression.py  utils.py
script/housing-prices/data/: housing-simplified-1.csv
script/storageclass/: nfs-storageclasses.yaml  provisioner.yaml  rbac.yaml  test-claim.yaml
src/: lib.rs  main.rs
src/api/: job_api.rs  mod.rs  server.rs
src/api/client/: job.rs  mod.rs
src/core/: cnode.rs  db_config.rs  id.rs  job_db_models.rs  main_db_models.rs  mod.rs  models.rs  spec.rs
src/dag/: base.rs  channel.rs  cnode.rs  dag.rs  graph.rs  mod.rs
src/dbrepo/: job_db_mongo.rs  main_db_mongo.rs  mod.rs  mongo.rs  mongo_config.rs
src/driver/: driver.rs  kube.rs  kube_derive.rs  kube_option.rs  kube_util.rs  mod.rs
src/driver/kube/: mod.rs  pause.rs  restart.rs  start.rs  status.rs  stop.rs
src/driver/kube_pipe/: mod.rs
src/driver/kubetpl/: channel_deployment.tpl  channel_service.tpl  channel_statefulset.tpl  claim.tpl  deployment.tpl  service.tpl  statefulset.tpl
src/job/: job_mgr.rs  mod.rs
src/network/: mod.rs
src/network/protos/: common.proto  datatransfer.proto  nodecontroller.proto
src/rpc/: job.rs  mod.rs  server.rs
src/utils/: k8s_helper.rs  mod.rs  sizefmt.rs  utils.rs
