[workspace]
members = [
  "crates/dp_runner",
  "crates/compute_unit_runner",
  "crates/jiaozifs_client_rs", "nodes/jz_reader", "nodes/jz_writer", "nodes/dummy_in", "nodes/dummy_out"
, "nodes/copy_in_place"]

[workspace.package]
repository = "https://github.com/GitDataAI/jz-action"
license = "MIT OR Apache-2.0"
edition = "2021"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]

[workspace.dependencies]
anyhow =  "1.0.86"
tracing = "0.1.40"
tracing-subscriber = "0.3"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-retry = "0.3"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tonic = "0.12.1"
serde_json = {version = "1.0.117"}
serde = {version ="1.0.203", features = ["derive"]}
uuid = {version="1.8.0", features = ["v4","serde"]}
mongodb = {version="3.0.1"}
chrono = "0.4"
async-trait = "0.1.81"
futures = "0.3.30"

[package]
name = "jz_action"
version = "0.1.0"
edition = "2021"

[dependencies]

bimap = "0.6.3"
kube = { version = "0.93.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
handlebars = "6.0.0"
prost = "0.13.1"
serde_variant = "0.1.3"

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tokio-retry = {workspace = true}
tokio-stream = {workspace = true}

uuid =  {workspace = true}
anyhow =  {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tonic = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
mongodb = {workspace = true}
chrono = {workspace = true}
futures = {workspace = true}
async-trait = {workspace = true}


[build-dependencies]
tonic-build = "0.12.1"
log= "0.4.21"
env_logger="0.11.3"
