[workspace]
members = [
  "crates/dp_runner",
  "crates/compute_unit_runner",
  "crates/jiaozifs_client_rs", "nodes/jz_reader", "nodes/jz_writer", "nodes/make_article", "nodes/list_files"
, "nodes/copy_in_place", "crates/nodes_sdk"]

[workspace.package]
repository = "https://github.com/GitDataAI/jz-flow"
license = "MIT OR Apache-2.0"
edition = "2021"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]

[workspace.dependencies]
anyhow =  "1.0.86"
tracing = "0.1.40"
tracing-subscriber = "0.3"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-retry = "0.3"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tonic = "0.12.1"
serde_json = {version = "1.0.117"}
serde = {version ="1.0.203", features = ["derive"]}
uuid = {version="1.8.0", features = ["v4","serde"]}
mongodb = {version="3.0.1"}
chrono = "0.4"
async-trait = "0.1.81"
futures = "0.3.30"
clap = {version="4.5.7", features=["derive"]}
actix-web = "4.8.0"
reqwest = {version="0.12.5", features=["json"]}

[package]
name = "jz_flow"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.93.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
handlebars = "6.0.0"
prost = "0.13.1"
serde_variant = "0.1.3"
uri="0.4.0"
prettytable-rs = "^0.10"
k8s-metrics = "0.16.0"

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tokio-retry = {workspace = true}
tokio-stream = {workspace = true}
tokio-util= {workspace = true}

actix-web =  {workspace = true}
clap = {workspace = true}
uuid =  {workspace = true}
anyhow =  {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tonic = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
mongodb = {workspace = true}
chrono = {workspace = true}
futures = {workspace = true}
async-trait = {workspace = true}
reqwest =  {workspace = true}
ratatui = "0.28.0"

[build-dependencies]
tonic-build = "0.12.1"
log= "0.4.21"
env_logger="0.11.3"
