[package]
name = "channel_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
jiaoziflow = { path = "../../"}
nodes_sdk = {path = "../nodes_sdk"}

tokio = { workspace = true }
tokio-retry = {workspace = true}
tokio-stream = {workspace = true}
tokio-util = {workspace = true}
anyhow =  {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tonic = {workspace = true}
uuid =  {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
clap = {workspace = true}
futures = {workspace = true}

rand = "0.8.5"
walkdir = "2.5.0"