[package]
name = "compute_unit_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
jz_action = { path = "../../"}

tokio = { workspace = true }
tokio-retry = {workspace = true}
tokio-stream = {workspace = true}

anyhow =  {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tonic = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
uuid =  {workspace = true}
mongodb = {workspace = true}

clap = {version="4.5.7", features=["derive"]}
actix-web = "4.8.0"
hyperlocal = "0.9.1"
hyper = "1.4.1"
hyper-util = "0.1.6"
http-body-util = "0.1.2"
walkdir = "2.5.0"