[package]
name = "dp_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
jz_action = { path = "../../"}
compute_unit_runner = { path = "../compute_unit_runner"}

tokio = { workspace = true }
tokio-retry = {workspace = true}
tokio-stream = {workspace = true}
anyhow =  {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tonic = {workspace = true}
uuid =  {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}

clap = {version="4.5.7", features=["derive"]}
rand = "0.8.5"
walkdir = "2.5.0"