[package]
name = "jiaozifs_client_rs"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "jiaozifs HTTP API"
license = "Apache 2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "stream", "multipart"] }
bytes = "1.0"
futures-core = { version = "0.3.28", default-features = false }