[package]
name = "copy_in_place"
version = "0.1.0"
repository.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
jiaoziflow = { path = "../../"}
compute_unit_runner = {path  = "../../crates/compute_unit_runner"}
nodes_sdk  = {path  = "../../crates/nodes_sdk"}

uuid =  {workspace = true}
tokio = { workspace = true}
tokio-retry = {workspace = true}
tokio-stream = {workspace = true}
anyhow =  {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tokio-util = {workspace = true}
clap = {workspace = true}

random_word = { version = "0.4.3", features = ["en"] }