[package]
name = "dummy_in"
version = "0.1.0"
repository.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
jz_action = { path = "../../"}
compute_unit_runner = {path  = "../../crates/compute_unit_runner"}

uuid =  {workspace = true}
tokio = { workspace = true}
tokio-retry = {workspace = true}
tokio-stream = {workspace = true}
anyhow =  {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tokio-util = {workspace = true}
clap = {workspace = true}

random_word = { version = "0.4.3", features = ["en"] }