[package]
name = "jz_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
jz_action = { path = "../../"}
compute_unit_runner = {path  = "../../crates/compute_unit_runner"}
jiaozifs_client_rs = {path  = "../../crates/jiaozifs_client_rs"}

uuid =  {workspace = true}
tokio = { workspace = true}
tokio-retry = {workspace = true}
tokio-stream = {workspace = true}
anyhow =  {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
clap = {version="4.5.7", features=["derive"]}