[package]
name = "jz_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
jiaoziflow = { path = "../../"}
compute_unit_runner = {path  = "../../crates/compute_unit_runner"}
jiaozifs_client_rs = {path  = "../../crates/jiaozifs_client_rs"}
nodes_sdk  = {path  = "../../crates/nodes_sdk"}

uuid =  {workspace = true}
tokio = { workspace = true}
tokio-retry = {workspace = true}
tokio-stream = {workspace = true}
tokio-util = {workspace = true}
anyhow =  {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
clap = {workspace = true}
itertools =  {workspace = true}